@@ -61,11 +61,6 @@ if test "$GCC" = "yes"; then
 	fi
 fi
 
-
-AC_MSG_NOTICE([Detecting C library capabilities])
-
-AC_FUNC_ALLOCA
-
 AC_MSG_NOTICE([Detecting system's parameters])
 
 # Run self-tests under valgrind?
@@ -107,6 +102,7 @@ AC_ARG_ENABLE([ld-version-script],
 AM_CONDITIONAL(HAVE_LD_VERSION_SCRIPT, test "$have_ld_version_script" = "yes")
 
 # For gnulib compatibility modules in gl/.
+AC_MSG_NOTICE([Running gnulib checks])
 gl_INIT
 
 # For libtasn1-config.
